--- a/icropper.css
+++ b/icropper.css
@@ -1,7 +1,6 @@
 
 .icropper {
 	position: relative;
-
 }
 
 .no-select {
@@ -14,6 +13,8 @@
 }
 
 .icropper .crop-node {
+	/*blank bg image for IE*/
+	background-image: url('data:image/gif;base64,R0lGODlhMgAyAIAAAAAAAP///yH5BAEHAAEALAAAAAAyADIAAAIzjI+py+0Po5y02ouz3rz7D4biSJbmiabqyrbuC8fyTNf2jef6zvf+DwwKh8Si8YhMKicFADs=');
     border: 1px dotted #999;
     position: absolute;
     z-index: 8;
@@ -40,9 +41,14 @@
 
 .icropper .block    {    
 	position: absolute; 
-	opacity:0.5; 
+	opacity:0.5;
 	z-index: 5;
 	background-color: #000;
+
+	/* IE 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	/* IE 5-7 */
+	filter: alpha(opacity=50);
 }
 .icropper .block-l  {    left: 0; }
 .icropper .block-t  {    top: 0; width: 100%; }
